chore: add content to header

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ a {
 .content {
     margin: 0 auto;
     padding: 2rem 0;
-    max-width: 1200px;
+    width: 1200px;
 }
 
 /* .brand */
@@ -91,4 +91,62 @@ a {
 .header__top {
     display: flex;
     justify-content: space-between;
+}
+
+.header__content {
+    padding: 3rem 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__image {
+    width: 25rem;
+    filter: brightness(0.8);
+}
+
+.header__title {
+    width: 30rem;
+    line-height: 2rem;
+}
+
+.header__subtitle {
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+
+.header__link {
+    margin-top: 1rem;
+    width: 15rem;
+}
+
+/* .column */
+.column {
+    display: flex;
+    flex-direction: column;
+}
+
+/* .button */
+.button {
+    padding: 1rem 2rem;
+    color: #FAFAFA;
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+    background-color: #51961B;
+}
+
+.button_opacity {
+    opacity: 0.75;
+}
+
+.button_opacity:hover {
+    opacity: 1;
+    transition: 1s;
+}
+
+.button:hover {
+    background-color: #60b122;
+    transition: 1s;
 }
