--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ a {
 /* .content */
 .content {
     margin: 0 auto;
-    padding: 2rem 0;
+    padding: 1rem 0;
     width: 1200px;
 }
 
@@ -133,12 +133,14 @@ a {
 /* .button */
 .button {
     padding: 1rem 2rem;
+    border: none;
     color: #FAFAFA;
     font-size: 1.2rem;
     font-weight: 500;
     text-transform: uppercase;
     text-align: center;
     background-color: #51961B;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .button_opacity {
@@ -170,20 +172,18 @@ a {
 }
 
 .infoblock__subtitle {
-    margin: 1rem 0;
+    margin-top: 1rem;
     font-size: 1.0rem;
     font-weight: 500;
 }
 
 .infoblock__line {
+    margin-top: 1rem;
     width: 100%;
     border-bottom: 0.2rem solid #212121;
 }
 
 /* .clients */
-.clients {
-}
-
 .clients__cards {
     margin: 1rem 0;
     display: flex;
@@ -225,4 +225,66 @@ a {
     object-fit: contain;
     background-color: #FAFAFA;
     opacity: .75;
+}
+
+/* .export */
+.export__content {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+    transition: 1s;
+}
+
+.export__image {
+    max-width: 30rem;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.export__form {
+    width: 100%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+/* .form */
+.form {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    background-color: #FAFAFA;
+}
+
+.form > * {
+    margin: .2rem 0;
+}
+
+.form__title {
+    /* margin: 0; */
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+.form__subtitle {
+    font-size: 1.2rem;
+}
+
+.form__label {
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.form__input {
+    max-width: 20rem;
+    padding: 1rem;
+    font-family: 'Roboto';
+    font-weight: 500;
+    color: #212121;
+    border: none;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    background-color: #FFF;
+}
+
+.form__button {
+    margin-top: 1rem;
+    max-width: 20rem;
 }
