--- a/css/style.css
+++ b/css/style.css
@@ -288,3 +288,99 @@ a {
     margin-top: 1rem;
     max-width: 20rem;
 }
+
+/* .card */
+.card {
+    position: relative;
+    margin-left: 5%;
+    padding: 1rem 2rem;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #FAFAFA;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    transition: 1s;
+}
+
+.card__background {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    z-index: -1;
+    content: '';
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: brightness(.5);
+}
+
+.card:nth-child(n+2) {
+    margin-top: 1.5rem;
+}
+
+.card:nth-child(2n) {
+    margin-left: 10%;
+}
+
+.card__title {
+    margin: 0;
+    line-height: 2rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #FFF;
+}
+
+.card__subtitle {
+    max-width: 60%;
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.card__subtitle_weight-normal {
+    font-weight: 400;
+}
+
+.card__items {
+    position: relative;
+    margin: 1rem 0;
+    padding: .5rem 0;
+    width: 75%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.card__items::before {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    z-index: -1;
+    content: '';
+    background-color: rgba(33, 33, 33, .5);
+}
+
+.card__item {
+    margin: .5rem auto;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card__item-title {
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+    border-bottom: .1rem solid #FAFAFA;
+}
+
+.card__item-subtitle {
+    line-height: 1.5rem;
+    text-align: center;
+}
+
+.card__button {
+    margin-top: 1rem;
+}
