chore: change corp name

--- a/vlknn/templates/vlknn/index.html
+++ b/vlknn/templates/vlknn/index.html
@@ -1,7 +1,7 @@
 {% extends "vlknn/base.html" %}
 {% load static %}
 
-{% block title %} Волго-окская лесная компания {% endblock %}
+{% block title %} Приволжская Лесная Компания НН {% endblock %}
 
 {% block content %}
     <div class="clients content">
