--- a/vlknn/templates/vlknn/includes/header.html
+++ b/vlknn/templates/vlknn/includes/header.html
@@ -5,7 +5,7 @@
         <div class="header__top">
             <a class="brand" href="/">
                 <img class="brand__logo" src="{% static 'vlknn/images/logo.svg' %}" alt="logo">
-                <span class="brand__corp">Волго-окская лесная компания НН</span>
+                <span class="brand__corp">Приволжская Лесная Компания НН</span>
             </a>
             <div class="corp-info">
                 <div class="corp-info__top">
