chore: add new client

--- a/vlknn/templates/vlknn/index.html
+++ b/vlknn/templates/vlknn/index.html
@@ -12,6 +12,9 @@
         </div>
         <div class="clients__cards">
             <div class="mini-card">
+                <img class="mini-card__image" src="{% static 'vlknn/images/our-clients/client11.png'%}">
+            </div>
+            <div class="mini-card">
                 <img class="mini-card__image" src="{% static 'vlknn/images/our-clients/client01.png'%}">
             </div>
             <div class="mini-card">
@@ -74,7 +77,7 @@
             <h2 class="card__title">Круглый лес</h2>
             <div class="card__items">
                 <div class="card__item">
-                    <span class="card__item-title">Ливственница ГОСТ 22298-76</span>
+                    <span class="card__item-title">Лиственница ГОСТ 22298-76</span>
                     <span class="card__item-subtitle">24см и выше</span>
                 </div>
                 <div class="card__item">
