--- a/vlknn/static/vlknn/css/style.css
+++ b/vlknn/static/vlknn/css/style.css
@@ -195,8 +195,9 @@ a {
 /* .mini-card */
 .mini-card {
     position: relative;
-    margin: 1rem;
-    padding: 1rem 2.5rem;
+    margin: 2rem;
+    /* padding: 1rem 2.5rem; */
+    padding: 1rem;
     border-bottom: .3rem solid #212121;
     width: 8rem; height: 8rem;
     display: flex;
@@ -224,9 +225,10 @@ a {
 }
 
 .mini-card__image {
-    object-fit: contain;
     background-color: #FAFAFA;
     opacity: .75;
+    width: 100%; height: 100%;
+    object-fit: contain;
 }
 
 /* .export */
