--- a/vlknn/static/vlknn/css/style.css
+++ b/vlknn/static/vlknn/css/style.css
@@ -74,7 +74,6 @@ a {
     position: relative;
     height: 750px;
     color: #FAFAFA;
-    background-color: rgba(0, 0, 0, 0.75);
 }
 
 .header::after {
@@ -86,7 +85,7 @@ a {
     background-image: url(../images/header-background.png);
     background-repeat: no-repeat;
     background-size: cover;
-    /* filter: brightness(0.4); */
+    filter: brightness(0.4);
 }
 
 .header__top {
@@ -204,7 +203,6 @@ a {
     align-items: center;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     transition: 1s;
-    background-color: rgba(0, 0, 0, .5);
 }
 
 .mini-card::before {
@@ -216,7 +214,7 @@ a {
     background-image: url(../images/header-background.png);
     background-repeat: no-repeat;
     background-size: cover;
-    /* filter: brightness(.6); */
+    filter: brightness(.6);
 }
 
 .mini-card:hover {
@@ -317,7 +315,7 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     opacity: .5;
-    /* filter: brightness(.5); */
+    filter: brightness(.5);
 }
 
 .card:nth-child(n+2) {
