--- a/vlknn/templates/vlknn/includes/header.html
+++ b/vlknn/templates/vlknn/includes/header.html
@@ -21,7 +21,7 @@
             <div class="header__column">
                 <h1 class="header__title">Поставляем качественный лес и пиломатериалы</h1>
                 <span class="header__subtitle">В любых количествах точно в срок по РФ и на экспорт.</span>
-                <a href="#" class="header__link button button_opacity">Каталог продукции</a>
+                <a href="#feedback" class="header__link button button_opacity">Каталог продукции</a>
                 <div class="header__info corp-info">
                     <div class="corp-info__top">
                         <span>+7 (930) 819-85-08</span>
