--- a/vlknn/templates/vlknn/index.html
+++ b/vlknn/templates/vlknn/index.html
@@ -54,7 +54,8 @@
         </div>
         <div class="export__content">
             <img class="export__image" src="{% static 'vlknn/images/airplane.jpg'%}">
-            <form class="export__form form" action="POST">
+            <form class="export__form form" method="POST" action="{% url 'feedback' %}">
+                {% csrf_token %}
                 <h3 class="form__title">Доставим в Вашу страну!</h3>
                 <span class="form__subtitle">Оставьте заявку в наш Экспортный отдел!</span>
                 <span class="form__subtitle">Узнайте стоимость доставки до Вашей страны!</span>
@@ -93,7 +94,7 @@
                     <span class="card__item-subtitle">18-50см и выше. Сорт 1-3</span>
                 </div>
             </div>
-            <a class="card__button button button_opacity" href="#">Узнать цены</a>
+            <a class="card__button button button_opacity" href="#feedback">Узнать цены</a>
         </div>
         <div class="products__item card">
             <div class="card__background" style="background-image: url({% static 'vlknn/images/cards/card01.jpg'%});"></div>
@@ -125,7 +126,7 @@
                     <span class="card__item-subtitle">от 25х100 до 250х250</span>
                 </div>
             </div>
-            <a class="card__button button button_opacity" href="#">Узнать цены</a>
+            <a class="card__button button button_opacity" href="#feedback">Узнать цены</a>
         </div>
         <div class="products__item card">
             <div class="card__background" style="background-image: url({% static 'vlknn/images/cards/card02.jpg'%});"></div>
@@ -145,7 +146,7 @@
                     <span class="card__item-subtitle">Вагонка 12,8х88, Имитация бруса 19х135, Планкен 18х143</span>
                 </div>
             </div>
-            <a class="card__button button button_opacity" href="#">Узнать цены</a>
+            <a class="card__button button button_opacity" href="#feedback">Узнать цены</a>
         </div>
         <div class="products__item card">
             <div class="card__background" style="background-image: url({% static 'vlknn/images/cards/card03.jpg'%});"></div>
@@ -164,13 +165,13 @@
                     <span class="card__item-subtitle">18-30см</span>
                 </div>
             </div>
-            <a class="card__button button button_opacity" href="#">Узнать цены</a>
+            <a class="card__button button button_opacity" href="#feedback">Узнать цены</a>
         </div>
         <div class="products__item card">
             <div class="card__background" style="background-image: url({% static 'vlknn/images/cards/card04.jpg'%});"></div>
             <h2 class="card__title">Кора лиственницы (мульча)</h2>
             <span class="card__subtitle card__subtitle_weight-normal">Кора лиственницы (мульча). Используется садоводами для мульчирования почвы. Срок службы в 20 раз превышает срока службы сосны. Нефракционная. Упаковка в мешки по 60 литров. Продаём мульчу оптом и в розницу.</span>
-            <a class="card__button button button_opacity" href="#">Узнать цены</a>
+            <a class="card__button button button_opacity" href="#feedback">Узнать цены</a>
         </div>
     </div>
 {% endblock %}
