--- a/vlknn/templates/vlknn/includes/header.html
+++ b/vlknn/templates/vlknn/includes/header.html
@@ -5,7 +5,7 @@
         <div class="header__top">
             <a class="brand" href="/">
                 <img class="brand__logo" src="{% static 'vlknn/images/logo.svg' %}" alt="logo">
-                <span class="brand__corp">Приволжская Лесная Компания НН</span>
+                <h1 class="brand__corp">Приволжская Лесная Компания НН</h1>
             </a>
             <div class="corp-info">
                 <div class="corp-info__top">
@@ -19,7 +19,7 @@
         </div>
         <div class="header__content">
             <div class="header__column">
-                <h1 class="header__title">Поставляем качественный лес и пиломатериалы</h1>
+                <span class="header__title">Поставляем качественный лес и пиломатериалы</span>
                 <span class="header__subtitle">В любых количествах точно в срок по РФ и на экспорт.</span>
                 <a href="#feedback" class="header__link button button_opacity">Каталог продукции</a>
                 <div class="header__info corp-info">
