--- a/vlknn/templates/vlknn/base.html
+++ b/vlknn/templates/vlknn/base.html
@@ -9,9 +9,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Пиломатериал от производителя, лиственница, кедр, доска, брус, срубы, сосна, ель">
         <meta name="keywords" content="пиломатериал, пиломатериал из России, сосна, ель, лиственница, кедр, пиломатериалы в нижнем новгороде, купить пиломатериалы оптом от производителя">
+        <meta property="og:site_name" content="Приволжская Лесная Компания">
         <meta property="og:title" content="Приволжская лесная компания. Пиломатериал, лиственница, кедр, доска, брус, вагонка, срубы. Надежный партнер от природы. Пиломатериалы-для каждого!">
+        <meta property="og:description" content="Пиломатериал от производителя, лиственница, кедр, доска, брус, срубы, сосна, ель">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="http://privolles.ru/static/vlknn/images/header-background.jpg">
+        <meta property="og:url" content="http://privolles.ru/">
+        <meta property="og:locale" content="ru_RU">
         <link rel="canonical" href="http://privolles.ru/">
-        <link rel="preload" href="/assets/3.8/vendors-sync.js?v=1641142829" as="script">
 
         <link rel="shortcut icon" href="{% static 'vlknn/favicon256.png' %}" type="image/png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
