feat: add about block to landing page

--- a/vlknn/static/vlknn/css/media.css
+++ b/vlknn/static/vlknn/css/media.css
@@ -18,7 +18,12 @@
         align-items: center;
         text-align: center;
     }
-    
+
+    /* .infoblock */
+    .infoblock {
+        padding: 0;
+    }
+
     /* .mini-card */
     .mini-card {
         margin: .5rem;
