--- a/vlknn/templates/vlknn/index.html
+++ b/vlknn/templates/vlknn/index.html
@@ -4,6 +4,8 @@
 {% block title %} Приволжская Лесная Компания НН {% endblock %}
 
 {% block content %}
+    {% include 'vlknn/includes/about.html' %}
+
     <div class="clients content">
         <div class="infoblock">
             <h2 class="infoblock__title">Наши клиенты</h2>
