--- a/vlknn/static/vlknn/css/style.css
+++ b/vlknn/static/vlknn/css/style.css
@@ -164,6 +164,7 @@ a {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding: 0 10rem;
 }
 
 .infoblock__title {
@@ -478,4 +479,16 @@ a {
 .column {
     display: flex;
     flex-direction: column;
+}
+
+/* .about */
+.about__paragraph {
+    margin: 1rem 0;
+    font-size: 1.2rem;
+    line-height: 1.75rem;
+}
+
+.about__paragraph:hover {
+    color: #000;
+    transition: 1s;
 }
