--- a/vlknn/static/vlknn/css/media.css
+++ b/vlknn/static/vlknn/css/media.css
@@ -110,8 +110,9 @@
         justify-content: start;
     }
     .export__image {
-        width: auto;
-        max-width: 100%;
+        /* width: auto; */
+        /* max-width: 100%; */
+        width: 100%;
     }
     .export__form {
         width: auto
