--- a/vlknn/static/vlknn/css/style.css
+++ b/vlknn/static/vlknn/css/style.css
@@ -240,7 +240,7 @@ a {
 }
 
 .export__image {
-    max-width: 30rem;
+    width: 40rem;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
@@ -491,4 +491,10 @@ a {
 .about__paragraph:hover {
     color: #000;
     transition: 1s;
+}
+
+/* .image */
+.image {
+    width: 100%; height: 100%;
+    object-fit: cover;
 }
