chore: minor changes for the feedback form

--- a/vlknn/templates/vlknn/includes/feedback-form.html
+++ b/vlknn/templates/vlknn/includes/feedback-form.html
@@ -1,13 +1,12 @@
-<form class="form" method="POST" action="{% url 'feedback' %}">
+<form id='{{ id }}' class="form" method="POST" action="{% url 'feedback' %}">
     {% csrf_token %}
-    <h3 class="form__title">Доставим в Вашу страну!</h3>
-    <span class="form__subtitle">Оставьте заявку в наш Экспортный отдел!</span>
-    <span class="form__subtitle">Узнайте стоимость доставки до Вашей страны!</span>
+    <h3 class="form__title">{{ title }}</h3>
+    <span class="form__subtitle">{{ subtitle }}</span>
     <label class="form__label" for="phone-number">Введите номер телефона</label>
     <input class="form__input" type="tel" name="phone-number" placeholder="+7 (999) 888-77-66">
     <label class="form__label" for="name">Ваше имя</label>
     <input class="form__input" type="text" name="name" placeholder="Иван">
-    {% if show_product %}
+    {% if show_product_input %}
         <label class="form__label" for="product">Наименование, размер и вид продукции</label>
         <input class="form__input" type="text" name="product" placeholder="Кедр, имитация бруса 19х135">
     {% endif %}
