--- a/vlknn/templates/vlknn/includes/footer.html
+++ b/vlknn/templates/vlknn/includes/footer.html
@@ -1,15 +1,8 @@
 <footer class="footer">
     <div class="footer__content content">
-        <form id="feedback" class="footer__form form" method="POST" action="{% url 'feedback' %}">
-            {% csrf_token %}
-            <h3 class="form__title">Мы заинтересованы в сотрудничестве с Вами!</h3>
-            <span class="form__subtitle">Мы с удовольствием  бросаемся в работу над новыми задачами, обязательно свяжитесь с нами!</span>
-            <label class="form__label" for="phone-number">Введите номер телефона</label>
-            <input class="form__input" type="tel" name="phone-number" placeholder="+7 (999) 888-77-66">
-            <label class="form__label" for="name">Ваше имя</label>
-            <input class="form__input" type="text" name="name" placeholder="Иван">
-            <input class="form__button button" type="submit" value="Отправить заявку">
-        </form>
+        <div class="footer__form">
+            {% include 'vlknn/includes/feedback-form.html' with show_product_input=True subtitle='Мы с удовольствием  бросаемся в работу над новыми задачами, обязательно свяжитесь с нами!' id='feedback' title='Мы заинтересованы в сотрудничестве с Вами!' %}
+        </div>
         <div class="footer__column column">
             <div class="column__item aboutus">
                 <div class="footer__aboutus aboutus__phone-list">
