--- a/vlknn/templates/vlknn/index.html
+++ b/vlknn/templates/vlknn/index.html
@@ -17,7 +17,7 @@
                 <img class="image" src="{% static 'vlknn/images/airplane.jpg'%}">
             </div>
             <div class="export__form">
-                {% include 'vlknn/includes/feedback-form.html' with title='Доставим в Вашу страну!' subtitle='Мы заинтересованы в сотрудничестве с Вами! Отправьте заявку на интересующую Вас продукцию нашей компании и в течении 15 минут с Вами свяжется наш менеджер.' %}
+                {% include 'vlknn/includes/feedback-form.html' with title='Доставим в Вашу страну!' subtitle='Оставьте заявку в наш Экспортный отдел!<br>Узнайте стоимость доставки до Вашей страны!' %}
             </div>
         </div>
     </div>
