--- a/vlknn/templates/vlknn/includes/header.html
+++ b/vlknn/templates/vlknn/includes/header.html
@@ -9,8 +9,8 @@
             </a>
             <div class="corp-info">
                 <div class="corp-info__top">
-                    <span>+7 (930) 819-85-08</span>
-                    <span>+7 (910) 386-66-61</span>
+                    <a  class="main-footer__phone_number" href="tel:7 (930) 819 85 08"><span>+7 (930) 819-85-08</span></a>
+                    <a class="main-footer__phone_number" href="tel:7 (910) 386 66 61"><span>+7 (910) 386-66-61</span></a>
                 </div>
                 <div class="corp-info__bottom">
                     <span>пн-вс, 08:00-18:00 (по МСК)</span>
@@ -24,8 +24,8 @@
                 <a href="#feedback" class="header__link button button_opacity">Каталог продукции</a>
                 <div class="header__info corp-info">
                     <div class="corp-info__top">
-                        <span>+7 (930) 819-85-08</span>
-                        <span>+7 (910) 386-66-61</span>
+                        <a class="main-footer__phone_number" href="tel:7 (930) 819 85 08"><span>+7 (930) 819-85-08</span></a>
+                        <a class="main-footer__phone_number" href="tel:7 (910) 386 66 61"><span>+7 (910) 386-66-61</span></a>
                     </div>
                     <div class="corp-info__bottom">
                         <span>пн-вс, 08:00-18:00 (по МСК)</span>
