--- a/vlknn/templates/vlknn/includes/header.html
+++ b/vlknn/templates/vlknn/includes/header.html
@@ -4,7 +4,8 @@
     <div class="content">
         <div class="header__top">
             <a class="brand" href="/">
-                <img class="brand__logo" src="{% static 'vlknn/images/logo.svg' %}" alt="logo">
+                <img class="brand__logo" src="{% static 'vlknn/images/minLogo-v.2.svg' %}" alt="logo">
+                
                 <h1 class="brand__corp">Приволжская Лесная Компания НН</h1>
             </a>
             <div class="corp-info">
