--- a/web_privolles/privolles/templates/privolles/includes/header.html
+++ b/web_privolles/privolles/templates/privolles/includes/header.html
@@ -1,6 +1,14 @@
 {% load static %}
 
 <header class="header">
+    <div class="background-images">
+        <div class="background-images__image-wrapper background-images__image-wrapper_right-0 background-images__image-wrapper_top-30perc">
+            <img src="{% static 'privolles/images/branch.png' %}" alt="image" class="background-images__image">
+        </div>
+        <div class="background-images__image-wrapper background-images__image-wrapper_left-0 background-images__image-wrapper_rotate-180deg background-images__image-wrapper_top-20perc">
+            <img src="{% static 'privolles/images/branch.png' %}" alt="image" class="background-images__image">
+        </div>
+    </div>
     <div class="content">
         <div class="header__top">
             <a class="brand" href="/">
@@ -17,11 +25,11 @@
                 </div>
             </div>
         </div>
-        <div class="header__content">
+        <div class="header__content header__content_z-index-10">
             <div class="header__column">
                 <span class="header__title">Поставляем качественный лес и пиломатериалы</span>
-                <span class="header__subtitle">В любых количествах точно в срок по РФ и на экспорт.</span>
-                <a href="#feedback" class="header__link button button_opacity">Каталог продукции</a>
+                <span class="header__subtitle header__subtitle_mv-1rem">В любых количествах точно в срок по РФ и на экспорт.</span>
+                <a href="#feedback" class="header__link button button_center button_opacity">Каталог продукции</a>
                 <div class="header__info corp-info">
                     <div class="corp-info__top">
                         <a class="corp-info__phone-number" href="tel:+79308198508">+7 (930) 819-85-08</a>
@@ -32,7 +40,6 @@
                     </div>
                 </div>
             </div>
-            <img class="header__image" src="{% static 'privolles/images/header-image.png' %}">
         </div>
     </div>
 </header>
