--- a/web_privolles/privolles/static/privolles/css/media.css
+++ b/web_privolles/privolles/static/privolles/css/media.css
@@ -8,7 +8,6 @@
     .header {
         height: 30rem;
     }
-
     .header__image {
         display: none;
     }
@@ -16,6 +15,10 @@
         width: 100%;
         align-items: center;
         text-align: center;
+    }
+
+    .background-images .background-images__image-wrapper {
+        width: 50%;
     }
 
     /* .infoblock */
