chore: minor changes for background of the header block

--- a/web_privolles/privolles/static/privolles/css/media.css
+++ b/web_privolles/privolles/static/privolles/css/media.css
@@ -17,8 +17,9 @@
         text-align: center;
     }
 
-    .background-images .background-images__image-wrapper {
-        width: 50%;
+    /* .background-images */
+    .background-images {
+        display: none;
     }
 
     /* .infoblock */
