--- a/web_privolles/privolles/static/privolles/css/style.css
+++ b/web_privolles/privolles/static/privolles/css/style.css
@@ -135,7 +135,7 @@ a {
 }
 
 .header__link {
-    margin-top: 1rem;
+    margin-top: 2rem;
     width: 15rem;
 }
 
@@ -165,7 +165,8 @@ a {
 }
 
 .button_center {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .button_opacity {
