chore: change the "our products" block

--- a/web_privolles/privolles/static/privolles/css/media.css
+++ b/web_privolles/privolles/static/privolles/css/media.css
@@ -130,17 +130,11 @@
     }
 
     /* .card */
-    .card {
-        margin-left: 0;
-        padding: 1rem;
-        width: auto;
+    .card__wrapper {
+        max-width: 100%;
+        width: 100%;
+        padding: .5rem 1rem;
         text-align: center;
-    }
-    .card:nth-child(2n) {
-        margin-left: 0;
-    }
-    .card__subtitle {
-        max-width: none;
     }
     .card__items {
         padding: 1rem;
