--- a/web_privolles/privolles/templates/privolles/base.html
+++ b/web_privolles/privolles/templates/privolles/base.html
@@ -18,12 +18,14 @@
         <meta property="og:locale" content="ru_RU">
         <link rel="canonical" href="http://privolles.ru/">
 
+        <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
         <link rel="shortcut icon" href="{% static 'privolles/favicon256.png' %}" type="image/png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="{% static 'privolles/fonts/roboto/fonts.css' %}">
         <link rel="stylesheet" href="{% static 'privolles/css/normilize.min.css' %}">
         <link rel="stylesheet" href="{% static 'privolles/css/style.css' %}">
         <link rel="stylesheet" href="{% static 'privolles/css/media.css' %}">
+
 
         <title>{% block title %}{% endblock %}</title>
     </head>
