--- a/web_privolles/privolles/static/privolles/css/style.css
+++ b/web_privolles/privolles/static/privolles/css/style.css
@@ -319,17 +319,20 @@ a {
 
 /* .card */
 .card {
+    display: flex;
+    justify-content: center;
+}
+
+.card__wrapper {
     position: relative;
-    margin-left: 5%;
-    padding: 1rem 2rem;
+    max-width: 80%;
     width: 80%;
+    padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: #FAFAFA;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    transition: 1s;
-    background-color: #000;
 }
 
 .card__background {
@@ -341,16 +344,7 @@ a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: .5;
-    filter: brightness(.5);
-}
-
-.card:nth-child(n+2) {
-    margin-top: 1.5rem;
-}
-
-.card:nth-child(2n) {
-    margin-left: 10%;
+    opacity: .9;
 }
 
 .card__title {
@@ -359,6 +353,7 @@ a {
     font-size: 1.5rem;
     font-weight: 700;
     color: #FFF;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
 .card__subtitle {
@@ -366,6 +361,7 @@ a {
     font-size: 1rem;
     font-weight: 500;
     text-align: center;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
 .card__subtitle_weight-normal {
@@ -536,28 +532,48 @@ a {
     left: 0; top: 0;
     width: 100%; height: 100%;
 }
+
 .background-images .background-images__image-wrapper {
     position: absolute;
 }
+
 .background-images .background-images__image-wrapper.background-images__image-wrapper_top-20perc {
     top: 20%;
 }
+
 .background-images .background-images__image-wrapper.background-images__image-wrapper_top-25perc {
     top: 25%;
 }
+
 .background-images .background-images__image-wrapper.background-images__image-wrapper_top-30perc {
     top: 30%;
 }
+
 .background-images .background-images__image-wrapper.background-images__image-wrapper_left-0 {
     left: 0;
 }
+
 .background-images .background-images__image-wrapper.background-images__image-wrapper_right-0 {
     right: 0;
 }
+
 .background-images .background-images__image-wrapper.background-images__image-wrapper_rotate-180deg {
     transform: rotate(180deg);
 }
+
 .background-images .background-images__image {
     width: 100%; height: 100%;
     object-fit: contain;
+}
+
+/* .products */
+.products__carousel {
+    margin-top: 1rem;
+}
+/* .products */
+.products .swiper-button-next {
+    color: #51961B;
+}
+.products .swiper-button-prev {
+    color: #51961B;
 }
