feat: add the feedback post endpoint

--- a/privollesru/templates/base.html
+++ b/privollesru/templates/base.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
         <link rel="shortcut icon" href="{% static 'favicon256.png' %}" type="image/png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
         <link rel="stylesheet" href="{% static 'fonts/roboto/fonts.css' %}">
         <link rel="stylesheet" href="{% static 'css/normilize.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -42,8 +43,13 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
+        {% include 'includes/message.html' %}
+
         {% block content %}{% endblock %}
 
+        <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
         {% block extra_js %}{% endblock %}
