--- a/privollesru/templates/includes/footer.html
+++ b/privollesru/templates/includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer__content content">
         <div class="footer__form">
-            {% include 'home/includes/feedback-form.html' with show_product_input=True subtitle='Мы заинтересованы в сотрудничестве с Вами! Отправьте заявку на интересующую Вас продукцию нашей компании и в течении 15 минут с Вами свяжется наш менеджер.' id='feedback' title='Мы заинтересованы в сотрудничестве с Вами!' %}
+            {% include 'home/includes/feedback-form.html' with show_product_input=True id='footerFeedbackForm' subtitle='Мы заинтересованы в сотрудничестве с Вами! Отправьте заявку на интересующую Вас продукцию нашей компании и в течении 15 минут с Вами свяжется наш менеджер.' title='Мы заинтересованы в сотрудничестве с Вами!' %}
         </div>
         <div class="footer__column column">
             <div class="column__item aboutus">
