--- a/privollesru/static/css/style.css
+++ b/privollesru/static/css/style.css
@@ -162,6 +162,8 @@ a {
     text-align: center;
     background-color: #51961B;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    cursor: pointer;
+    user-select: none;
 }
 
 .button_center {
