--- a/home/templates/home/includes/products.html
+++ b/home/templates/home/includes/products.html
@@ -131,6 +131,8 @@
             </div>
 
         </div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
 
 </div>
